--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Server=localhost;Database=vehiclesdb;User Id=SA;Password=yourStrong(!)Password;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
