add TrustServerCertificate to ConnectionString

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Server=localhost;Database=master;User Id=SA;Password=yourStrong(!)Password;"
+    "DefaultConnection": "Server=localhost;Database=master;User Id=SA;Password=yourStrong(!)Password;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
