--- a/vehicleDealer.csproj
+++ b/vehicleDealer.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>vehicle_retailer</RootNamespace>
+    <RootNamespace>vehicleDealer</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
